add api update transaction
